[lib]
crate-type = ["lib"]

[package]
name = "wyhash-final4"
description = "The rust implementation of wyhash final4 hash function"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/thynson/wyhash-final4.git"
homepage = "https://github.com/thynson/wyhash-final4"
keywords = ["hash", "wyhash"]

[features]
wyhash32 = []
wyhash32condom = []
wyhash64 = []
wyhash64condom = []
std = []
default = ["wyhash32", "wyhash32condom", "wyhash64", "wyhash64condom", "std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
harness = false


[dependencies]

[dev-dependencies]
criterion = "0.4"

[profile.release]
opt-level = 3
codegen-units = 1
lto = 'thin'
overflow-checks = false

[profile.bench]
opt-level = 3
codegen-units = 1
lto = 'thin'
overflow-checks = false
